[gd_scene load_steps=26 format=3 uid="uid://cbimodxf0fbhu"]

[ext_resource type="Script" path="res://scenes/ui/waymark_menu.gd" id="1_sqrhw"]
[ext_resource type="Texture2D" uid="uid://glmlxtvb0wx7" path="res://assets/common/world_markers/wm_menu_trans.png" id="2_qx7ww"]
[ext_resource type="Texture2D" uid="uid://bdlrvfp5ys0c4" path="res://assets/common/world_markers/wm_menu_collapsed.png" id="3_ri3rt"]
[ext_resource type="Texture2D" uid="uid://d0lmgkhpr4k37" path="res://assets/common/world_markers/wm_a_button.png" id="4_bfals"]
[ext_resource type="Texture2D" uid="uid://b0tv83kyk8p4c" path="res://assets/common/world_markers/wm_a_highlight.png" id="5_h3bkw"]
[ext_resource type="Texture2D" uid="uid://weemca1o6r47" path="res://assets/common/world_markers/wm_b_button.png" id="6_rsnit"]
[ext_resource type="Texture2D" uid="uid://dpqvyhwjdsf4l" path="res://assets/common/world_markers/wm_b_highlight.png" id="7_mydwa"]
[ext_resource type="Texture2D" uid="uid://qe8f37v1hdg2" path="res://assets/common/world_markers/wm_c_button.png" id="8_rhaq8"]
[ext_resource type="Texture2D" uid="uid://djmc8k2o4d1b2" path="res://assets/common/world_markers/wm_c_highlight.png" id="9_wdq4n"]
[ext_resource type="Texture2D" uid="uid://cfbpwa1xxikyt" path="res://assets/common/world_markers/wm_d_button.png" id="10_vnkay"]
[ext_resource type="Texture2D" uid="uid://fruuyvplgtaw" path="res://assets/common/world_markers/wm_d_highlight.png" id="11_5fjuf"]
[ext_resource type="Texture2D" uid="uid://bdug87asdylnd" path="res://assets/common/world_markers/wm_1_button.png" id="12_hqhtb"]
[ext_resource type="Texture2D" uid="uid://beguuy7jx4n1q" path="res://assets/common/world_markers/wm_1_highlight.png" id="13_p6yby"]
[ext_resource type="Texture2D" uid="uid://y6x7pb68q6e8" path="res://assets/common/world_markers/wm_2_button.png" id="14_fch7e"]
[ext_resource type="Texture2D" uid="uid://b1pfy5inyr1fg" path="res://assets/common/world_markers/wm_2_highlight.png" id="15_oky2m"]
[ext_resource type="Texture2D" uid="uid://c4a75ec2chcpd" path="res://assets/common/world_markers/wm_3_button.png" id="16_7v283"]
[ext_resource type="Texture2D" uid="uid://b47vvca2b3cg2" path="res://assets/common/world_markers/wm_3_highlight.png" id="17_1wbn6"]
[ext_resource type="Texture2D" uid="uid://bbsbgcxopcpvy" path="res://assets/common/world_markers/wm_4_button.png" id="18_7frhi"]
[ext_resource type="Texture2D" uid="uid://b42ldh6mtl1kp" path="res://assets/common/world_markers/wm_4_highlight.png" id="19_5rj0m"]
[ext_resource type="Texture2D" uid="uid://6poin71gcpn2" path="res://assets/common/world_markers/wm_clear_button.png" id="20_8ya5f"]
[ext_resource type="Texture2D" uid="uid://b7lw1r5ylyx77" path="res://assets/common/world_markers/wm_clear_highlight.png" id="21_ih8ox"]
[ext_resource type="Texture2D" uid="uid://bwls2bpv656q2" path="res://assets/common/world_markers/wm_slot_button.png" id="22_li18a"]
[ext_resource type="Texture2D" uid="uid://bh0hp8kolkjld" path="res://assets/common/icons/ui_icons/refresh_icon.png" id="23_epstp"]
[ext_resource type="Texture2D" uid="uid://drxeeilmxbm4b" path="res://assets/common/world_markers/wm_slot_highlight.png" id="23_k3qeu"]
[ext_resource type="Texture2D" uid="uid://s36a2fvt0jyd" path="res://assets/common/icons/ui_icons/refresh_icon_highlight.png" id="24_o1hbi"]

[node name="WaymarkMenu" type="CanvasLayer"]
script = ExtResource("1_sqrhw")

[node name="MenuContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -364.0
offset_right = 225.0
grow_vertical = 0

[node name="TextureRect" type="TextureRect" parent="MenuContainer"]
layout_mode = 2
texture = ExtResource("2_qx7ww")
expand_mode = 4
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="MenuContainer"]
layout_mode = 2
theme_override_constants/margin_left = 9
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 27

[node name="GridContainer" type="GridContainer" parent="MenuContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 13.215)
layout_mode = 2
theme_override_constants/h_separation = 1
theme_override_constants/v_separation = 2
columns = 5

[node name="ButtonA" type="TextureButton" parent="MenuContainer/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(40.359, 42.033)
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("4_bfals")
texture_hover = ExtResource("5_h3bkw")
ignore_texture_size = true
stretch_mode = 4

[node name="ButtonB" type="TextureButton" parent="MenuContainer/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(40.359, 42.033)
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("6_rsnit")
texture_hover = ExtResource("7_mydwa")
ignore_texture_size = true
stretch_mode = 4

[node name="ButtonC" type="TextureButton" parent="MenuContainer/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(40.359, 42.033)
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("8_rhaq8")
texture_hover = ExtResource("9_wdq4n")
ignore_texture_size = true
stretch_mode = 4

[node name="ButtonD" type="TextureButton" parent="MenuContainer/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(40.359, 42.033)
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("10_vnkay")
texture_hover = ExtResource("11_5fjuf")
ignore_texture_size = true
stretch_mode = 4

[node name="Button1" type="TextureButton" parent="MenuContainer/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(40.359, 42.033)
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("12_hqhtb")
texture_hover = ExtResource("13_p6yby")
ignore_texture_size = true
stretch_mode = 4

[node name="Button2" type="TextureButton" parent="MenuContainer/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(40.359, 42.033)
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("14_fch7e")
texture_hover = ExtResource("15_oky2m")
ignore_texture_size = true
stretch_mode = 4

[node name="Button3" type="TextureButton" parent="MenuContainer/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(40.359, 42.033)
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("16_7v283")
texture_hover = ExtResource("17_1wbn6")
ignore_texture_size = true
stretch_mode = 4

[node name="Button4" type="TextureButton" parent="MenuContainer/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(40.359, 42.033)
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("18_7frhi")
texture_hover = ExtResource("19_5rj0m")
ignore_texture_size = true
stretch_mode = 4

[node name="ButtonClear" type="TextureButton" parent="MenuContainer/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(40.359, 42.033)
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("20_8ya5f")
texture_hover = ExtResource("21_ih8ox")
ignore_texture_size = true
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ButtonSlot1" type="TextureButton" parent="MenuContainer/MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 22)
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("22_li18a")
texture_hover = ExtResource("23_k3qeu")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="MenuContainer/MarginContainer/VBoxContainer/VBoxContainer/ButtonSlot1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.5
offset_top = -11.5
offset_right = 31.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.796243, 0.796243, 0.796243, 1)
theme_override_colors/font_outline_color = Color(0.154876, 0.154876, 0.154876, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 15
text = "Preset 1"
horizontal_alignment = 1

[node name="ButtonSlot2" type="TextureButton" parent="MenuContainer/MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 23.4)
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("22_li18a")
texture_hover = ExtResource("23_k3qeu")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="MenuContainer/MarginContainer/VBoxContainer/VBoxContainer/ButtonSlot2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.5
offset_top = -11.5
offset_right = 31.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.796078, 0.796078, 0.796078, 1)
theme_override_colors/font_outline_color = Color(0.152941, 0.152941, 0.152941, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 15
text = "Preset 2"
horizontal_alignment = 1

[node name="ButtonSlot3" type="TextureButton" parent="MenuContainer/MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 23.4)
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("22_li18a")
texture_hover = ExtResource("23_k3qeu")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="MenuContainer/MarginContainer/VBoxContainer/VBoxContainer/ButtonSlot3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.5
offset_top = -11.5
offset_right = 31.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.796078, 0.796078, 0.796078, 1)
theme_override_colors/font_outline_color = Color(0.152941, 0.152941, 0.152941, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 15
text = "Preset 3"
horizontal_alignment = 1

[node name="ButtonSlot4" type="TextureButton" parent="MenuContainer/MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 23.4)
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("22_li18a")
texture_hover = ExtResource("23_k3qeu")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="MenuContainer/MarginContainer/VBoxContainer/VBoxContainer/ButtonSlot4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.5
offset_top = -11.5
offset_right = 31.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.796078, 0.796078, 0.796078, 1)
theme_override_colors/font_outline_color = Color(0.152941, 0.152941, 0.152941, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 15
text = "Mana Preset"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MenuContainer/MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 23.4)
layout_mode = 2
theme_override_constants/separation = 1

[node name="ButtonSlot5" type="TextureButton" parent="MenuContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(188.07, 23.445)
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("22_li18a")
texture_hover = ExtResource("23_k3qeu")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="MenuContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/ButtonSlot5"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.815
offset_top = -11.7225
offset_right = 53.185
offset_bottom = 11.2775
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.796078, 0.796078, 0.796078, 1)
theme_override_colors/font_outline_color = Color(0.152941, 0.152941, 0.152941, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 14
text = "Custom 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SaveButton5" type="TextureButton" parent="MenuContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(16.39, 0)
layout_mode = 2
texture_normal = ExtResource("23_epstp")
texture_hover = ExtResource("24_o1hbi")
ignore_texture_size = true
stretch_mode = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="MenuContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="ButtonSlot6" type="TextureButton" parent="MenuContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(188.215, 23.4)
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("22_li18a")
texture_hover = ExtResource("23_k3qeu")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="MenuContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/ButtonSlot6"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.8275
offset_top = -11.0
offset_right = 42.1725
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.796078, 0.796078, 0.796078, 1)
theme_override_colors/font_outline_color = Color(0.152941, 0.152941, 0.152941, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 14
text = "Custom 2"
horizontal_alignment = 2
vertical_alignment = 1

[node name="SaveButton6" type="TextureButton" parent="MenuContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(16.2, 0)
layout_mode = 2
texture_normal = ExtResource("23_epstp")
texture_hover = ExtResource("24_o1hbi")
ignore_texture_size = true
stretch_mode = 5

[node name="ArrowContainer" type="MarginContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -37.0
offset_right = 224.0
grow_vertical = 0

[node name="CollapseButton" type="TextureButton" parent="ArrowContainer"]
custom_minimum_size = Vector2(223, 34.255)
layout_mode = 2
size_flags_vertical = 8
focus_mode = 0
mouse_filter = 1
texture_normal = ExtResource("3_ri3rt")
ignore_texture_size = true
stretch_mode = 4

[connection signal="pressed" from="MenuContainer/MarginContainer/VBoxContainer/GridContainer/ButtonA" to="." method="_on_button_a_pressed"]
[connection signal="pressed" from="MenuContainer/MarginContainer/VBoxContainer/GridContainer/ButtonB" to="." method="_on_button_b_pressed"]
[connection signal="pressed" from="MenuContainer/MarginContainer/VBoxContainer/GridContainer/ButtonC" to="." method="_on_button_c_pressed"]
[connection signal="pressed" from="MenuContainer/MarginContainer/VBoxContainer/GridContainer/ButtonD" to="." method="_on_button_d_pressed"]
[connection signal="pressed" from="MenuContainer/MarginContainer/VBoxContainer/GridContainer/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="MenuContainer/MarginContainer/VBoxContainer/GridContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="MenuContainer/MarginContainer/VBoxContainer/GridContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="MenuContainer/MarginContainer/VBoxContainer/GridContainer/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="MenuContainer/MarginContainer/VBoxContainer/GridContainer/ButtonClear" to="." method="_on_button_clear_pressed"]
[connection signal="pressed" from="MenuContainer/MarginContainer/VBoxContainer/VBoxContainer/ButtonSlot1" to="." method="_on_button_slot_1_pressed"]
[connection signal="pressed" from="MenuContainer/MarginContainer/VBoxContainer/VBoxContainer/ButtonSlot2" to="." method="_on_button_slot_2_pressed"]
[connection signal="pressed" from="MenuContainer/MarginContainer/VBoxContainer/VBoxContainer/ButtonSlot3" to="." method="_on_button_slot_3_pressed"]
[connection signal="pressed" from="MenuContainer/MarginContainer/VBoxContainer/VBoxContainer/ButtonSlot4" to="." method="_on_button_slot_4_pressed"]
[connection signal="pressed" from="MenuContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/ButtonSlot5" to="." method="_on_button_slot_5_pressed"]
[connection signal="pressed" from="MenuContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/SaveButton5" to="." method="_on_save_button_5_pressed"]
[connection signal="pressed" from="MenuContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/ButtonSlot6" to="." method="_on_button_slot_6_pressed"]
[connection signal="pressed" from="MenuContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/SaveButton6" to="." method="_on_save_button_6_pressed"]
[connection signal="pressed" from="ArrowContainer/CollapseButton" to="." method="_on_collapse_button_pressed"]
